--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -46,4 +45,6 @@
         </div>
     </div>
 </body>
+
+    <script src="./src/js/app.js"></script>
 </html>
