--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
                     <a href="/" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/nosotros" class="nav-link">Nosotros</a>
+                    <a href="/pag/nosotros.html" class="nav-link">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                        <a href="/eventos" class="nav-link">Eventos</a>
+                        <a href="/pag/eventos.html" class="nav-link">Eventos</a>
                 </li>
                 <li class="nav-item">
-                        <a href="/donaciones" class="nav-link">Donaciones</a>
+                        <a href="/pag/donaciones.html" class="nav-link">Donaciones</a>
                 </li>
                 <li class="nav-item">
-                        <a href="/contacto" class="nav-link">Contacto</a>
+                        <a href="/pag/contacto.html" class="nav-link">Contacto</a>
                 </li>
             </ul>
             <form class="form-inline mt-2 mt-md-0">
