--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
                     <a href="/" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/pag/nosotros.html" class="nav-link">Nosotros</a>
+                    <a href="./src/page/nosotros.html" class="nav-link">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                        <a href="/pag/eventos.html" class="nav-link">Eventos</a>
+                        <a href="./src/page/eventos.html" class="nav-link">Eventos</a>
                 </li>
                 <li class="nav-item">
-                        <a href="/pag/donaciones.html" class="nav-link">Donaciones</a>
+                        <a href="./src/page/donaciones.html" class="nav-link">Donaciones</a>
                 </li>
                 <li class="nav-item">
-                        <a href="/pag/contacto.html" class="nav-link">Contacto</a>
+                        <a href="./src/page/contacto.html" class="nav-link">Contacto</a>
                 </li>
             </ul>
             <form class="form-inline mt-2 mt-md-0">
