--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./src/img/logo.png">
+    <link href="./src/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>MJFD</title>
 </head>
+
+<!--
+https://w.wallhaven.cc/full/96/wallhaven-96w8e8.png
+https://w.wallhaven.cc/full/ox/wallhaven-ox83gp.jpg
+https://w.wallhaven.cc/full/13/wallhaven-13mk9v.jpg
+-->
+
 <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
-        <a class="navbar-brand">covid19</a>
+        <a href="/" class="navbar-brand"> <img src="./src/img/logo.png" alt="logo" width="40" height="40"> </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -37,51 +45,62 @@
             </form>
         </div>
     </nav>
-    <div>
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+
+    <main role="main">
+        <div id="demo" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
-              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+              <li data-target="#demo" data-slide-to="0" class="active"></li>
+              <li data-target="#demo" data-slide-to="1"></li>
+              <li data-target="#demo" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="https://w.wallhaven.cc/full/96/wallhaven-96w8e8.png" class="d-block w-100" alt="Primer Slider">
+                <img src="https://w.wallhaven.cc/full/96/wallhaven-96w8e8.png" height="730" class="d-block w-100" alt="Primer Slider">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>First slide label</h5>
                     <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                   </div>
               </div>
               <div class="carousel-item">
-                <img src="https://w.wallhaven.cc/full/ox/wallhaven-ox83gp.jpg" class="d-block w-100" alt="Segundo Slider">
+                <img src="https://w.wallhaven.cc/full/ox/wallhaven-ox83gp.jpg" height="730" class="d-block w-100" alt="Segundo Slider">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>First slide label</h5>
                     <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="https://w.wallhaven.cc/full/13/wallhaven-13mk9v.jpg" class="d-block w-100" alt="Tercer Slider">
+                <img src="https://w.wallhaven.cc/full/13/wallhaven-13mk9v.jpg" height="730" class="d-block w-100" alt="Tercer Slider">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>First slide label</h5>
                     <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                 </div>
               </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <a class="carousel-control-prev" href="#demo" role="button" data-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="sr-only">Previous</span>
             </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <a class="carousel-control-next" href="#demo" role="button" data-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="sr-only">Next</span>
             </a>
         </div>
 
         <!--Contenido-->
-        <div>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam eum voluptas illum doloribus delectus, facere ut culpa nobis suscipit voluptates nemo, corporis dolor veniam ipsa modi! Hic architecto ducimus repudiandae distinctio pariatur? Magnam animi rem ipsum voluptatem sequi veniam magni harum minus nam fugiat possimus libero, maiores assumenda nulla at?</p>
+        <div class="container marketing">
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="justify-content-center">
+                        <img src="https://w.wallhaven.cc/full/96/wallhaven-96w8e8.png" class="bd-placeholder-img rounded-circle" width="140" height="140" aria-placeholder="Placeholder: 140x140" role="img">
+                    </div>
+                    
+                    <h2 class="text-center">Placeholder</h2>
+                    <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nemo distinctio et, architecto officiis dignissimos perferendis non cum corporis eaque.</p>
+                    <p class="justify-content-center"> <a class="btn btn-secondary" role="button">View details »</a> </p>
+                </div>
+            </div>
         </div>
-    </div>
+    </main>
 </body>
 
     <script src="./src/js/app.js"></script>
